--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -1,7 +1,7 @@
 # This workflow will run tests using node and then publish a package to GitHub Packages when a release is created
 # For more information see: https://docs.github.com/en/actions/publishing-packages/publishing-nodejs-packages
 
-name: 
+name: Expo-Alarm Package
 
 on:
   release:
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      - run: npm test
+      - run: npm test --passWithNoTests
 
   publish-npm:
     needs: build
