--- a/android/build.gradle
+++ b/android/build.gradle
@@ -12,7 +12,7 @@ useExpoPublishing()
 // If you want to use the managed Android SDK versions from expo-modules-core, set this to true.
 // The Android SDK versions will be bumped from time to time in SDK releases and may introduce breaking changes in your module code.
 // Most of the time, you may like to manage the Android SDK versions yourself.
-def useManagedAndroidSdkVersions = false
+def useManagedAndroidSdkVersions = true
 if (useManagedAndroidSdkVersions) {
   useDefaultAndroidSdkVersions()
 } else {
