--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-alarm",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "Use Android AlarmClock in React Native / Expo app",
   "main": "build/index.js",
   "types": "build/index.d.ts",
@@ -8,7 +8,7 @@
     "build": "expo-module build",
     "clean": "expo-module clean",
     "lint": "expo-module lint",
-    "test": "expo-module test",
+    "test": "expo-module test --passWithNoTests",
     "prepare": "expo-module prepare",
     "prepublishOnly": "expo-module prepublishOnly",
     "expo-module": "expo-module",
@@ -19,7 +19,8 @@
     "react-native",
     "expo",
     "expo-alarm",
-    "ExpoAlarm"
+    "ExpoAlarm",
+    "AlarmClock"
   ],
   "repository": "https://github.com/Alperengozum/expo-alarm",
   "bugs": {
@@ -31,8 +32,8 @@
   "dependencies": {},
   "devDependencies": {
     "@types/react": "^18.0.25",
-    "expo-module-scripts": "^3.5.2",
-    "expo-modules-core": "^1.12.24"
+    "expo-module-scripts": "^4.1.8",
+    "expo-modules-core": "^2.4.2"
   },
   "peerDependencies": {
     "expo": "*",
